beta.6: fixed items visibility

--- a/projects/rcx-virtual-list/index.css
+++ b/projects/rcx-virtual-list/index.css
@@ -27,16 +27,17 @@
     height: 100%;
 }
 
-.rcxvl-item {
+.rcxvl__item {
     display: block;
     position: absolute;
     left: 0;
     top: 0;
     box-sizing: border-box;
     overflow: hidden;
+    will-change: scroll-position;
 }
 
-.rcxvl-item__container {
+.rcxvl__item-container {
     margin: 0;
     padding: 0;
     overflow: hidden;
